--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-python -m pip install virtualenv
-python -m venv venv
-venv/Scripts/activate
-pip install flask
-python app.py
+Flask==2.0.1
+Flask-MySQLdb==0.2.0
+mysql-connector-python==8.0.27
