--- a/db.config
+++ b/db.config
@@ -1,5 +1,5 @@
 {
-    "host":"172.30.17.54:3306",
+    "host":"mysqldb-service.rohan91196-dev.svc.cluster.local",
     "user":"root",
     "password":"root",
     "database":"pmt"
